list of farms is displayed on index

--- a/app/views/alchemy/page_layouts/_index.html.erb
+++ b/app/views/alchemy/page_layouts/_index.html.erb
@@ -1,1 +1,5 @@
 <%= render_elements %>
+
+<% Alchemy::Element.all.where(name: "farm_info").each do |farm| %>
+  <%= farm.content_by_name("farm_name").ingredient %>
+<% end %>
