EssenceZacks are highlighted when user hovers over them

--- a/app/views/alchemy/essences/_essence_zack_view.html.erb
+++ b/app/views/alchemy/essences/_essence_zack_view.html.erb
@@ -1,2 +1,4 @@
 <%# The content object holds the essence %>
-<strong><%= content.ingredient %></strong>
+<div class='essence_zack'>
+  <strong><%= content.ingredient %></strong>
+</div>
