User can create restaurants, navbar rendered at top of page

--- a/app/views/alchemy/elements/_business_info_editor.html.erb
+++ b/app/views/alchemy/elements/_business_info_editor.html.erb
@@ -1,5 +1,5 @@
 <%= element_editor_for(element) do |el| -%>
-  <%= el.edit :farm_name %>
+  <%= el.edit :business_name %>
   <%= el.edit :description %>
   <%= el.edit :picture %>
 <%- end -%>
