--- a/app/views/alchemy/elements/_business_info_view.html.erb
+++ b/app/views/alchemy/elements/_business_info_view.html.erb
@@ -1,7 +1,7 @@
 <%- cache(element) do -%>
   <%= element_view_for(element) do |el| -%>
-    <div class="farm_name">
-      <%= el.render :farm_name %>
+    <div class="business_name">
+      <%= el.render :business_name %>
     </div>
     <div class="description">
       <%= el.render :description %>
