Images automatically resized

--- a/app/views/alchemy/elements/_business_info_view.html.erb
+++ b/app/views/alchemy/elements/_business_info_view.html.erb
@@ -7,7 +7,7 @@
       <%= el.render :description %>
     </div>
     <div class="picture">
-      <%= el.render :picture %>
+      <%= el.render :picture, image_size: '100x100', crop: true %>
     </div>
   <%- end -%>
 <%- end -%>
