--- a/app/views/alchemy/elements/_ad_space_view.html.erb
+++ b/app/views/alchemy/elements/_ad_space_view.html.erb
@@ -1,5 +1,5 @@
 <%- cache(element) do -%>
   <%= element_view_for(element) do |el| -%>
-    <%= el.render :ad %>
+    <%= el.render :ad, image_size: '200x200' %>
   <%- end -%>
 <%- end -%>
